--- a/Comproyvendo/app/src/main/res/layout/activity3.xml
+++ b/Comproyvendo/app/src/main/res/layout/activity3.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.alki.comproyvendo.Activity3">
+    tools:context=".EarningData">
     <TextView
         android:id="@+id/totalEarnings"
         android:layout_width="match_parent"
