--- a/Comproyvendo/app/src/main/res/layout/product_info.xml
+++ b/Comproyvendo/app/src/main/res/layout/product_info.xml
@@ -21,6 +21,7 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:text="Nombre: "
+        android:textSize="20sp"
         android:textColor="@color/textColorPrimary"
         android:fontFamily="sans-serif-thin" />
 
@@ -31,6 +32,7 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:text="Precio: "
+        android:textSize="20sp"
         android:textColor="@color/textColorPrimary"
         android:fontFamily="sans-serif-thin" />
 
@@ -41,6 +43,7 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:text="Stock: "
+        android:textSize="20sp"
         android:textColor="@color/textColorPrimary"
         android:fontFamily="sans-serif-thin" />
 
@@ -61,6 +64,7 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
+        android:textSize="20sp"
         android:fontFamily="sans-serif-thin" />
 
     <TextView
@@ -71,6 +75,7 @@
         android:layout_alignBottom="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
+        android:textSize="20sp"
         android:fontFamily="sans-serif-thin"/>
 
     <TextView
@@ -81,6 +86,7 @@
         android:layout_alignBottom="@+id/textView4"
         android:layout_toRightOf="@+id/textView4"
         android:text="TextView"
+        android:textSize="20sp"
         android:fontFamily="sans-serif-thin"/>
     <Button
         android:id="@+id/delete"
@@ -91,8 +97,6 @@
         android:text="Borrar"
         android:fontFamily="sans-serif-thin"
         android:textStyle="bold"
-        android:onClick="deleteAndRestart"
-
-        />
+        android:onClick="deleteAndRestart" />
 
 </RelativeLayout>
